# mlips-fundamentals

./: 00_torch_geometric_basics.ipynb  01_graph_data_structures.ipynb  README.md  main.py  pyproject.toml
