[project]
name = "mlips-fundamentals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "torch>=2.10.0",
    "torch-geometric>=2.7.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
]
